[tool.poetry]
name = "yahoo-oauth"
version = "2.0.1"
description = "A very easy to use OAuth python library for Yahoo! APIs."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
